crates/jarl/tests/integration/snapshots/integration__min_r_version__min_r_version_from_description_only-2.snap
---
source: crates/jarl/tests/integration/min_r_version.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---

success: false
exit_code: 1
----- stdout -----
warning: grepv
 --> test.R:1:1
  |
1 | grep('a.*', x, value = TRUE)
  | ---------------------------- `grep(..., value = TRUE)` can be simplified.
  |
  = help: Use `grepv(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
